RESOLVED FIXED232101
Rare crash under DisplayLink::displayLinkCallback()
https://bugs.webkit.org/show_bug.cgi?id=232101
Summary Rare crash under DisplayLink::displayLinkCallback()
Simon Fraser (smfr)
Reported 2021-10-21 13:21:53 PDT
Rare crash under DisplayLink::displayLinkCallback()
Attachments
Patch (2.42 KB, patch)
2021-10-21 13:25 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2021-10-21 13:25:03 PDT
Simon Fraser (smfr)
Comment 2 2021-10-21 13:25:07 PDT
EWS
Comment 3 2021-10-21 14:33:09 PDT
Committed r284644 (243364@main): <https://commits.webkit.org/243364@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442059 [details].
Chris Dumez
Comment 4 2021-10-29 17:32:57 PDT
*** Bug 232517 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.