Rare crash under DisplayLink::displayLinkCallback() https://bugs.webkit.org/show_bug.cgi?id=232101 <rdar://84153991>

Reviewed by Tim Horton.

The crash was a divide by zero under m_currentUpdate.nextUpdate(), indicating that
m_currentUpdate.updatesPerSecond was zero. Previous assumptions that this was caused
by weird display configs were wrong. The actual issue is a race condition where
the callback can fire while we're still inside CVDisplayLinkStart(), or at least
before we've updated m_currentUpdate.

The fix is to initialize m_currentUpdate before we call CVDisplayLinkStart().

* UIProcess/mac/DisplayLink.cpp:
(WebKit::DisplayLink::addObserver):


Canonical link: https://commits.webkit.org/243364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284644 268f45cc-cd09-0410-ab3c-d52691b4dbfc